--- a/src/sections/AboutMe/AboutMe.module.scss
+++ b/src/sections/AboutMe/AboutMe.module.scss
@@ -1,17 +1,33 @@
-.h2about{
-    color: #3c3b3b;
-    font-family: Raleway, Helvetica, sans-serif;
-    font-weight: 800;
-    letter-spacing: .25em;
-    line-height: 1.65;
-    margin: 0 0 1em;
-    text-transform: uppercase;
+.aAboutMe {
+  color: #3c3b3b;
+  font-family: Raleway, Helvetica, sans-serif;
+  font-weight: 800;
+  letter-spacing: 0.25em;
+  line-height: 1.65;
+  margin: 0 0 1em;
+  text-transform: uppercase;
 
-    &:hover{
-        color: #2e59ba!important;
-    }
+  &:hover {
+    color: #2e59ba !important;
+  }
 }
 
-.p1{
-  
+.h1AboutMe {
+  color: #3c3b3b;
+  font-size: 0.9rem;
+  font-weight: 300;
+  font-family: Raleway, Helvetica, sans-serif;
+  font-weight: 800;
+  letter-spacing: 0.25em;
+  line-height: 1.65;
+  margin: 0 0 1em;
+  text-transform: uppercase;
+}
+
+.pAboutMe {
+  color: #646464;
+  font-family: Source Sans Pro, Helvetica sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  font-size: 1rem;
 }
